--- a/positioning/index.css
+++ b/positioning/index.css
@@ -8,7 +8,10 @@ img
 }
 .pic2
 {
-    position: relative;
+    /* position: relative;
     top: 100px;
-    left:100px;
+    left:100px; */
+
+    position: absolute;
+    top: 100px;
 }
