REVISE : Positioning Property - fixed positioning
 Please enter the commit message for your changes. Lines starting

--- a/positioning/index.css
+++ b/positioning/index.css
@@ -5,6 +5,8 @@ img
 .container
 {
     border: 2px solid gray;
+    height: 1500px;
+    color: beige;
 }
 .pic2
 {
@@ -14,4 +16,8 @@ img
 
     position: absolute;
     top: 100px;
+}
+.pic4
+{
+    position: fixed;
 }
