--- a/positioning/index.css
+++ b/positioning/index.css
@@ -6,7 +6,11 @@ img
 {
     border: 2px solid gray;
     height: 1500px;
-    color: beige;
+    background-color: beige;
+}
+.box{
+    height: 1500px;
+   background-color: aquamarine;
 }
 .pic2
 {
@@ -14,10 +18,15 @@ img
     top: 100px;
     left:100px; */
 
-    position: absolute;
-    top: 100px;
+    /* position: absolute;
+    top: 100px; */
 }
 .pic4
 {
     position: fixed;
+}
+.pic3
+{
+    position: sticky;
+    top: 150px;
 }
